--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                     <h4 class="last-box3-text1">About
                         Blog
                         Contact
+                        Work
                         Jobs</h4>
                 </div>
                 <div class="last-box4">
